--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,7 +17,16 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: "Source Sans Pro", "sans-serif";
   font-size: 24px;
+}
+
+/*
+* Logo Stylization 
+*/
+
+.logo {
+  font-family:"Bungee";
 }
 
 /*
