--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,13 +3,18 @@
 */
 
 .navclass {
+  display: flex;
   height: 120px;
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
   padding-left: 1.5em;
   padding-right: 1.5em;
+  position: fixed;
+  align-items: center;
+  justify-content: space-between;
 }
 .navMenu {
   float: right;
 }
+
